# cash-cannon

./: .gitignore  3권_3장+부대+정비지침_완료.hwpx  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  auth_store.py  billing_provider.py  billing_store.py  database.py  db_models.py  dependencies.py  main.py  models.py  plans.py  services.py  store.py
backend/tests/: test_api.py
docs/: architecture.md  monetization.md  prd.md  research-notes.md
frontend/: App.tsx  app.json  package-lock.json  package.json
frontend/src/: api.ts  mockData.ts  storage.ts  types.ts
frontend/src/components/: AccountScreen.tsx  AuthScreen.tsx  DashboardScreen.tsx  OnboardingScreen.tsx
